added register page

--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,7 @@
         <div class="image">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"/></svg>
         </div>
-            <div class="form">
+        <div class="form">
             <p class="sign-in">Sign in</p>
             <div class="mail">
                 <p>Email</p>
@@ -25,7 +25,7 @@
             <p class="forgot">Forget your password?</p>
         </div>
         <p class="new">New to drive clone?</p>
-        <button class="register">Create an account</button>
+        <button class="register" type="button">Create an account</button>
         <p id="loginMessage"></p>
     </form>
     
