Fix the navigation links

--- a/public/login.html
+++ b/public/login.html
@@ -25,7 +25,7 @@
             <p class="forgot">Forget your password?</p>
         </div>
         <p class="new">New to drive clone?</p>
-        <button class="register" type="button">Create an account</button>
+        <a href="/register.html"><button class="register" type="button">Create an account</button></a>
         <p id="loginMessage"></p>
     </form>
     
