--- a/public/register.html
+++ b/public/register.html
@@ -49,7 +49,7 @@
                 <p>Use 8 or more characters with a mix of letters, numbers & symbols</p>
 
                 <div class="create">
-                    <p class="instead">log in instead</p>
+                    <a href="/login.html"><p class="instead">log in instead</p></a>
 
                     <button type="submit" class="register">Create an account</button>
                 </div>
