--- a/public/user.html
+++ b/public/user.html
@@ -16,14 +16,20 @@
     </div>
     <h2 class="sign-in">User Files</h2>
     <ul id="fileList"></ul>
+    <h2 class="sign-in">Upload File</h2>
+    <form id="uploadForm">
+      <input type="file" id="fileInput" name="file" required>
+      <button type="submit">Upload</button>
+    </form>
+    <p id="uploadMessage"></p>
   </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-        const token = sessionStorage.getItem('token');
-        if (!token) {
-          window.location = '/login.html';
-        }
+      const token = sessionStorage.getItem('token');
+      if (!token) {
+        window.location = '/login.html';
+      }
       try {
         const response = await fetch('/users', {
           method: 'GET',
@@ -36,11 +42,10 @@
           document.getElementById('firstName').textContent = sessionStorage.getItem('firstName');
           document.getElementById('lastName').textContent = sessionStorage.getItem('lastName');
           document.getElementById('email').textContent = sessionStorage.getItem('email');
-
           const fileList = document.getElementById('fileList');
           result.files.forEach(file => {
             const li = document.createElement('li');
-            li.textContent = file.name;
+            li.textContent = file.fileName;
             fileList.appendChild(li);
           });
         } else {
@@ -49,6 +54,41 @@
       } catch (error) {
         console.error('Error fetching user info:', error);
       }
+
+      document.getElementById('uploadForm').addEventListener('submit', async (event) => {
+        event.preventDefault();
+        const fileInput = document.getElementById('fileInput');
+        const file = fileInput.files[0];
+        if (!file) {
+          document.getElementById('uploadMessage').textContent = 'No file selected.';
+          return;
+        }
+
+        const formData = new FormData();
+        formData.append('file', file);
+
+        try {
+          const response = await fetch('/files/upload', {
+            method: 'POST',
+            headers: {
+              'Authorization': `Bearer ${token}`
+            },
+            body: formData
+          });
+          const result = await response.json();
+          if (response.ok) {
+            document.getElementById('uploadMessage').textContent = 'File uploaded successfully.';
+            const li = document.createElement('li');
+            li.textContent = file.name;
+            document.getElementById('fileList').appendChild(li);
+          } else {
+            document.getElementById('uploadMessage').textContent = `Upload failed: ${result.message}`;
+          }
+        } catch (error) {
+          console.error('Error uploading file:', error);
+          document.getElementById('uploadMessage').textContent = 'Upload failed: Internal server error.';
+        }
+      });
     });
   </script>
 </body>
