--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>drive clone login</title>
+    <title>Up & Down Login</title>
+    <link rel="shortcut icon" type="image/x-icon" href="upanddown-removebg-preview.png" />
     <link rel="stylesheet" href="/styles-login.css">
 </head>
 <body>
@@ -15,7 +16,7 @@
             <p class="sign-in">Sign in</p>
             <div class="mail">
                 <p>Email</p>
-                <input type="text" id="email" required>
+                <input type="email" id="email" required>
             </div>
             <div>
                 <p>Password</p>
@@ -24,7 +25,7 @@
             <button class="log-in" type="submit">Log in</button>
             <p class="forgot">Forget your password?</p>
         </div>
-        <p class="new">New to drive clone?</p>
+        <p class="new">New to Up & Down?</p>
         <a href="/register.html"><button class="register" type="button">Create an account</button></a>
         <p id="loginMessage"></p>
     </form>
