--- a/public/user.html
+++ b/public/user.html
@@ -3,19 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Page</title>
+  <title>Up & Down</title>
+  <link rel="shortcut icon" type="image/x-icon" href="upanddown-removebg-preview.png" />
   <link rel="stylesheet" href="styles-user.css">
 </head>
 <body>
   <div class="form">
-    <h1 class="sign-in">User Information</h1>
+    <h1 class="sign-in">Account Info</h1>
     <div class="user-info">
       <p><strong>First Name:</strong> <span id="firstName"></span></p>
       <p><strong>Last Name:</strong> <span id="lastName"></span></p>
       <p><strong>Email:</strong> <span id="email"></span></p>
+      <div class="log-out-div">
+        <a href="/login.html"><button class="log-out" type="button">Log out</button></a>
+      </div>
     </div>
-    <h2 class="sign-in">User Files</h2>
-    <div id="fileCards" class="file-cards"></div>
     <h2 class="sign-in">Upload File</h2>
     <form id="uploadForm" class="upload-form">
       <div class="upload-file">
@@ -28,6 +30,7 @@
       
       
     </form>
+    <div id="fileCards" class="file-cards"></div>
     <p id="uploadMessage"></p>
   </div>
 
