--- a/public/user.html
+++ b/public/user.html
@@ -15,7 +15,7 @@
       <p><strong>Last Name:</strong> <span id="lastName"></span></p>
       <p><strong>Email:</strong> <span id="email"></span></p>
       <div class="log-out-div">
-        <a href="/login.html"><button class="log-out" type="button">Log out</button></a>
+        <button class="log-out" type="button" id="logout">Log out</button>
       </div>
     </div>
     <h2 class="sign-in">Upload File</h2>
@@ -35,6 +35,12 @@
   </div>
 
   <script>
+
+    document.getElementById('logout').addEventListener('click', async (event) => {
+      sessionStorage.setItem('token', '');
+      window.location = '/login.html';
+    });
+
     document.addEventListener('DOMContentLoaded', async () => {
       const token = sessionStorage.getItem('token');
       if (!token) {
