added welcome page

--- a/public/register.html
+++ b/public/register.html
@@ -50,7 +50,7 @@
                 <p id="use8">Use 8 or more characters with a mix of letters, numbers & symbols</p>
 
                 <div class="create">
-                    <a href="/"><p class="instead">log in instead</p></a>
+                    <a href="/login.html"><p class="instead">log in instead</p></a>
 
                     <button type="submit" class="register">Create an account</button>
                 </div>
